# trialogue

./: .gitignore  AGENTS.md  Cargo.toml  QUAD_LOD_TEST.md  README.md  TUTORING_PLAN.md  flake.nix
.direnv/: flake-profile-1-link
.github/: dependabot.yaml
.github/workflows/: ci.yaml
crates/auto-prelude/: Cargo.toml
crates/auto-prelude/src/: lib.rs
crates/build-utils/: Cargo.toml
crates/build-utils/src/: lib.rs
crates/editor/: Cargo.toml  build.rs
crates/editor/src/: lib.rs  prelude.rs
crates/editor/src/editor/: editor_layer.rs  editor_state.rs  editor_ui.rs  mod.rs
crates/editor/src/inspector/: camera.rs  environment_map.rs  light.rs  material.rs  mesh.rs  mod.rs  sphere.rs  transform.rs
crates/engine/: Cargo.toml  build.rs
crates/engine/src/: async_task.rs  gpu_component.rs  input.rs  lib.rs  mod.rs  prelude.rs  shader.rs
crates/engine/src/components/: camera.rs  inspector.rs  instanced_mesh.rs  material.rs  mesh.rs  mod.rs  raytracer.rs  resources.rs  texture.rs  transform.rs
crates/engine/src/layers/: mod.rs
crates/engine/src/layers/device/: device_layer.rs
crates/engine/src/layers/raytracer/: raytracer.wgsl  raytracer_layer.rs  raytracer_systems.rs
crates/engine/src/layers/renderer/: mod.rs  render_layer.rs  shader.wgsl  shader_instanced.wgsl  shadow.wgsl
crates/engine/src/layers/renderer/systems/: camera.rs  mesh.rs  mod.rs  texture.rs  transform.rs
crates/engine/src/layers/window/: mod.rs  window_layer.rs
crates/game/: Cargo.toml  build.rs
crates/game/src/: Cargo.toml  main.rs  mod.rs  prelude.rs  sandbox_layer.rs
crates/game/src/components/: camera_controller.rs  mod.rs  planet.rs  planet_lod.rs  quad_lod_test.rs
crates/game/src/systems/: camera_controller.rs  instanced_lod.rs  mod.rs  planet.rs  planet_lod.rs  quad_lod_test.rs
crates/game/src/utils/: mod.rs  raycast.rs
src/: lib.rs  main.rs  prelude.rs  sandbox_layer.rs
src/components/: camera.rs  mod.rs  raytracer.rs  resources.rs
src/layer/renderer/: index.rs  mod.rs  render_layer.rs  shader.wgsl  vertex.rs
src/layer/renderer/components/: camera.rs  mesh.rs  mod.rs  resources.rs  textures.rs
src/layer/renderer/systems/: camera.rs  mesh.rs  mod.rs  texture.rs  textures.rs  transform.rs
src/layers/: mod.rs
src/layers/device/: device_layer.rs  mod.rs
src/layers/editor/: editor_layer.rs  editor_state.rs  editor_ui.rs  mod.rs
src/layers/raytracer/: mod.rs  raytracer_layer.rs  raytracer_systems.rs
src/layers/renderer/: device_layer.rs  mod.rs  render_layer.rs  window_layer.rs
src/layers/renderer/components/: camera.rs  inspector.rs  label.rs  mod.rs  resources.rs  transform.rs
src/layers/renderer/systems/: camera.rs  mesh.rs  texture.rs  transform.rs
src/layers/window/: window_layer.rs
src/shaders/: shader.wgsl
