[workspace]
members = ["crates/engine", "crates/editor", "crates/game"]
resolver = "2"

[workspace.dependencies]
wgpu = { version = "27.0.1" }
anyhow = "1.0.100"
bevy_ecs = { version = "0.17.2" }
bytemuck = { version = "1.24.0", features = ["derive"] }
env_logger = "0.11.8"
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = "0.33"
image = { version = "0.25.8", default-features = false, features = [
    "png",
    "jpeg",
    "hdr",
] }
log = "0.4.28"
nalgebra = { version = "0.34.1", features = ["bytemuck", "encase"] }
pollster = "0.4.0"
winit = "0.30.12"
encase = "0.12.0"
rfd = "0.15"
rand = "0.9.2"

[workspace.dependencies.naga]
version = "27.0.1"
features = ["wgsl-in"]
