[package]
name = "trialogue-editor"
version = "0.1.0"
edition = "2024"

[dependencies]
trialogue-engine = { path = "../engine" }
wgpu = { workspace = true }
bevy_ecs = { workspace = true }
log = { workspace = true }
nalgebra = { workspace = true }
winit = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
pollster = { workspace = true }
rfd = { workspace = true }
inventory = { workspace = true }

[build-dependencies]
build-utils = { path = "../build-utils" }
