[package]
name = "trialogue-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = { workspace = true }
anyhow = { workspace = true }
bevy_ecs = { workspace = true }
bytemuck = { workspace = true }
log = { workspace = true }
nalgebra = { workspace = true }
winit = { workspace = true }
encase = { workspace = true }
image = { workspace = true }
egui = { workspace = true }
rfd = { workspace = true }
pollster = { workspace = true }
rand = { workspace = true }

[build-dependencies]
naga = { workspace = true }
