[package]
name = "trialogue"
version = "0.1.0"
edition = "2024"

[dependencies]
trialogue-engine = { path = "../engine" }
trialogue-editor = { path = "../editor" }
anyhow = { workspace = true }
bevy_ecs = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
